--- a/assets/js/package.json
+++ b/assets/js/package.json
@@ -13,7 +13,8 @@
   "license": "MIT",
   "dependencies": {
     "bare-bones-slider": "^1.3.3",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "videojs-playlist": "^4.3.1"
   },
   "devDependencies": {
     "video.js": "^7.6.6"
