--- a/assets/js/package.json
+++ b/assets/js/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bare-bones-slider": "^1.3.3",
     "bxslider": "^4.2.14",
+    "jsprintmanager": "^2.0.4",
     "mixitup": "^3.3.1",
     "moment": "^2.24.0",
     "videojs-playlist": "^4.3.1"
