--- a/assets/js/package.json
+++ b/assets/js/package.json
@@ -17,6 +17,7 @@
     "jsprintmanager": "^2.0.4",
     "mixitup": "^3.3.1",
     "moment": "^2.24.0",
+    "print-js": "^1.0.63",
     "videojs-playlist": "^4.3.1"
   },
   "devDependencies": {
