add src class, namespacing add project package

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
 	},
 	"autoload": {
 		"psr-4": {
-			"AppEvent\\": "application/controllers/EventService/"
+			"AppEvent\\": "application/controllers/EventService/",
+			"Antrian\\" : "src"
 		}
 	},
 	"suggest": {
